// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHelp() should generate help without options. 1`] = `
"
.------------------------------------------------------------------------------.
| [1mnot-sync[22m                                                                     |
'------------------------------------------------------------------------------'

[1m[7m[32m     USAGE     [39m[27m[22m

[2m$[22m [32mnot-sync[39m [36mpath[39m

[1m[7m[36m   ARGUMENTS   [39m[27m[22m

[36m<path>[39m some
"
`;

exports[`getHelp() should return help text. 1`] = `
"
.----------------------------------------------------------------------------------------------------------------------.
| [1mnot-sync[22m                                                                                                             |
'----------------------------------------------------------------------------------------------------------------------'
Disable file synchronization for files in an auto detected cloud storage such as Dropbox, iCloudDrive or OneDrive.

[1m[7m[32m     USAGE     [39m[27m[22m

[2m$[22m [32mnot-sync[39m [options] <path>...
[2m$[22m [32mnot-sync[39m <path>...

[1m[7m[36m   ARGUMENTS   [39m[27m[22m

[36m<path>[39m Path or list of paths to disable syncronization for.
[36m<cli>[39m  use cli

[1m[7m[33m    OPTIONS    [39m[27m[22m

[33m-c --cwd[39m                                        Set current working directory for relative paths.
[33m-i --ignoreConfigs[39m [2m(Default: [22m[33mnode_modules,dist[39m[2m)[22m (CSV) Ignore configuration files (e.g. .gitignore, .prettierignore) to
                                                add new created files if any.
[33m-d --dry[39m                                        Prevents changes to be written to disk. Executes a dry run.
[33m-v --verbose[39m       [2m(Default: [22m[33mtrue[39m[2m)[22m              Outputs extra information.
[33m   --linkSameDir[39m                                Move files near original one for iCloudDrive. For example 'dist' is
                                                moved 'dist.nosync' in same directory.

[1m[7m[35m    EXAMPLES   [39m[27m[22m

[2m$[22m [32mnot-sync[39m node_modules,dist,coverage
"
`;

exports[`getHelp() should use default values. 1`] = `
"
[1m[7m[33m    OPTIONS    [39m[27m[22m

[33m-c --cwd[39m
     Set current working directory for relative paths.
[33m-i --ignoreConfigs[39m                                  [2m(Default: [22m[33mnode_modules,dist[39m[2m)[22m
     (CSV) Ignore configuration files (e.g. .gitignore, .prettierignore) to add
     new created files if any.
[33m-d --dry[39m
     Prevents changes to be written to disk. Executes a dry run.
[33m-v --verbose[39m                                                     [2m(Default: [22m[33mtrue[39m[2m)[22m
     Outputs extra information.
[33m   --linkSameDir[39m
     Move files near original one for iCloudDrive. For example 'dist' is moved
     'dist.nosync' in same directory.
"
`;

exports[`getHelp() should use package.json data. 1`] = `
"
.------------------------------------------------------------------------------.
| [1mnot-sync[22m                                                                     |
'------------------------------------------------------------------------------'
details

[1m[7m[32m     USAGE     [39m[27m[22m

[2m$[22m [32mnot-sync[39m [33m<options>[39m

[1m[7m[33m    OPTIONS    [39m[27m[22m

[33m-c --cwd[39m
     Set current working directory for relative paths.
[33m-i --ignoreConfigs[39m                                  [2m(Default: [22m[33mnode_modules,dist[39m[2m)[22m
     (CSV) Ignore configuration files (e.g. .gitignore, .prettierignore) to add
     new created files if any.
[33m-d --dry[39m
     Prevents changes to be written to disk. Executes a dry run.
[33m-v --verbose[39m                                                     [2m(Default: [22m[33mtrue[39m[2m)[22m
     Outputs extra information.
[33m   --linkSameDir[39m
     Move files near original one for iCloudDrive. For example 'dist' is moved
     'dist.nosync' in same directory.
"
`;
